--- a/hw3/TreesEnsembles.ipynb
+++ b/hw3/TreesEnsembles.ipynb
@@ -30,7 +30,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Задача: прогнозирование сроса. Читаем входные данные из файлов."
+    "Задача: прогнозирование спроса. Читаем входные данные из файлов."
    ]
   },
   {
@@ -110,7 +110,7 @@
    },
    "outputs": [],
    "source": [
-    "#train['y'] = train['y'].apply(lambda x: x ** (1.0 / 4))"
+    "train['y'] = train['y'].apply(lambda x: x ** (1.0 / 4))"
    ]
   },
   {
@@ -279,11 +279,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 185,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2016\n",
+      "2016\n",
+      "CPU times: user 36min 21s, sys: 4.92 s, total: 36min 26s\n",
+      "Wall time: 38min 32s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "from sklearn.ensemble import RandomForestRegressor, GradientBoostingRegressor\n",
@@ -379,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 186,
    "metadata": {
     "collapsed": false
    },
@@ -390,18 +401,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 187,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "#sample_submission['y'] = sample_submission['y'].apply(lambda x: x ** 4.0)"
+    "sample_submission['y'] = sample_submission['y'].apply(lambda x: x ** 4.0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 188,
    "metadata": {
     "collapsed": false
    },
@@ -422,42 +433,42 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>348622</td>\n",
-       "      <td>2349.06</td>\n",
+       "      <td>2279.456667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>348623</td>\n",
-       "      <td>17548.80</td>\n",
+       "      <td>17417.236667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>348624</td>\n",
-       "      <td>185606.55</td>\n",
+       "      <td>170581.586667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>348625</td>\n",
-       "      <td>20047.23</td>\n",
+       "      <td>19187.906667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>348626</td>\n",
-       "      <td>248.00</td>\n",
+       "      <td>99.716667</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      Num          y\n",
-       "0  348622    2349.06\n",
-       "1  348623   17548.80\n",
-       "2  348624  185606.55\n",
-       "3  348625   20047.23\n",
-       "4  348626     248.00"
+       "      Num              y\n",
+       "0  348622    2279.456667\n",
+       "1  348623   17417.236667\n",
+       "2  348624  170581.586667\n",
+       "3  348625   19187.906667\n",
+       "4  348626      99.716667"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 188,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 189,
    "metadata": {
     "collapsed": false
    },
@@ -490,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 190,
    "metadata": {
     "collapsed": true
    },
@@ -501,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 191,
    "metadata": {
     "collapsed": false
    },
@@ -514,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 192,
    "metadata": {
     "collapsed": true
    },
